# zmod_test

./: CMakeLists.txt  README.md
LIB/inc/: FTCI2C.h  FTD2XX.h  WinTypes.h  eco2.h  iaq.h  r_cda.h  tvoc.h
src/: main.c  zmod44xx.c
src/hicom/: hicom.c  hicom_i2c.c
src/hicom/inc/: FTCI2C.h  WinTypes.h  hicom.h  hicom_i2c.h
src/inc/: main.h
